<resources>
    <string name="app_name">LyfeRisk</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="vision_statement_title">Vision Statement</string>
    <string name="vision_statement">A societal transformation is taking place whereby healthcare professionals, and patients alike, are shifting from reactive to predictive HealthAI care management. Rather than waiting for health problems to be manifested as lifethreatening conditions, AI technology enables the prediction of future health problems using datasets of patient information. Enter LYFERISK, an AI-trained model that will assist doctors and patient alike to more quickly diagnose impeding issues and take action faster and more efficiently thus increasing the chances of success for treatment.</string>
    <string name="credits">  Alex Fenlon

                            Jason Fleming

                            Laiba Asif

                            Miguel Reis</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="menu">Menu</string>
    <string name="main_menu">Main Menu</string>
    <string name="records">Records</string>
    <string name="predict">Predict</string>
    <string name="review">Review</string>
    <string name="credits_word">Credits</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate us!</string>
    <string name="medical_records">Medical Records</string>
    <string name="save_and_quit"><![CDATA[Save & Quit]]></string>
    <string name="information_for_patient">A patient is any recipient of health care services that are performed by healthcare professionals.
        The patient is most often ill or injured and in need of treatment by a physician,
        nurse, optometrist, dentist, veterinarian, or other health care provider.</string>
    <string name="information_for_doctor"> A doctor is someone who is experienced and certified to practice medicine to help maintain or restore physical and mental health.
        A doctor is tasked with interacting with patients,
        diagnosing medical problems and successfully treating illness or injury.</string>
    <string name="information_for_insurance"> Health insurance or medical insurance is a type of insurance that covers the whole or a part of the risk of a person incurring medical expenses.
        As with other types of insurance, risk is shared among many individuals.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>