<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:backgroundTint="#006400"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="173dp"
        android:layout_height="131dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/textBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_no_background" />

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="243dp"
        android:layout_height="94dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <ImageView
        android:id="@+id/textBox"
        android:layout_width="314dp"
        android:layout_height="574dp"
        android:layout_marginTop="21dp"
        android:background="#006400"
        android:src="@drawable/textbubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTV" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="225dp"
        android:layout_height="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="400dp"
        android:editable="false"
        android:ems="10"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textColor="#006400"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintStart_toStartOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/chatButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#90ee90"
        android:text="Chat"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455" />

    <Button
        android:id="@+id/recordsButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/records"
        android:textSize="18sp"
        android:backgroundTint="#90ee90"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chatButton"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/reviewButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:text="@string/rate_us"
        android:textSize="18sp"
        android:backgroundTint="#90ee90"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="121dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#90ee90"
        android:text="@string/settings"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

    <Button
        android:id="@+id/creditButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:backgroundTint="#90ee90"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"        android:text="@string/credits_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chatButton"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:text="@string/contact"
        android:textSize="18sp"
        android:backgroundTint="#90ee90"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

    <Button
        android:id="@+id/medicalRecord"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:backgroundTint="#90ee90"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        android:text="@string/medical_records"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chatButton"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

</androidx.constraintlayout.widget.ConstraintLayout>
