<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:backgroundTint="#006400"
    tools:context=".CreditsActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="173dp"
        android:layout_height="131dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/textBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_no_background" />

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="243dp"
        android:layout_height="94dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <ImageView
        android:id="@+id/textBox"
        android:layout_width="314dp"
        android:layout_height="574dp"
        android:layout_marginTop="21dp"
        android:background="#006400"
        android:src="@drawable/textbubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTV" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="225dp"
        android:layout_height="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="400dp"
        android:editable="false"
        android:ems="10"
        android:text="@string/credits_word"
        android:textAlignment="center"
        android:textColor="#006400"
        android:textSize="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintStart_toStartOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="231dp"
        android:layout_height="286dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="128dp"
        android:text="@string/credits"
        android:textSize="34dp"
        app:layout_constraintBottom_toBottomOf="@+id/textBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

</androidx.constraintlayout.widget.ConstraintLayout>
