<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:backgroundTint="#006400"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="173dp"
        android:layout_height="131dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/textBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_no_background" />

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="243dp"
        android:layout_height="94dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <ImageView
        android:id="@+id/textBox"
        android:layout_width="314dp"
        android:layout_height="574dp"
        android:layout_marginTop="21dp"
        android:background="#006400"
        android:src="@drawable/textbubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTV" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="225dp"
        android:layout_height="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="400dp"
        android:editable="false"
        android:ems="10"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="#006400"
        android:textSize="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintStart_toStartOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/biometricsButton"
        android:layout_width="138dp"
        android:layout_height="73dp"
        android:layout_marginEnd="164dp"
        android:backgroundTint="#90ee90"
        android:text="Biometrics"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="156dp"
        android:layout_height="51dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#90ee90"
        android:onClick="saveAndQuit"
        android:text="@string/save_and_quit"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <Button
        android:id="@+id/authAppButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#90ee90"
        android:text="Auth App"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/emailButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#90ee90"
        android:text="Email"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/no2faButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#90ee90"
        android:text="No 2FA"
        android:textColor="#006400"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="277dp"
        android:layout_height="71dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="411dp"
        android:text="Please choose which way you'd like to verify your login for now on! Note: This is 2FA ( Two-Factor Authentication, this is a security measure)"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textBox"
        app:layout_constraintEnd_toEndOf="@+id/textBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textBox"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
